--- a/src/Components/component-css/image-grid.css
+++ b/src/Components/component-css/image-grid.css
@@ -30,10 +30,10 @@
 }
 .fat {
   grid-column: span 2;
-  grid-row:span 2;
+  grid-row: span 2;
 }
 
-img {
+.image-class {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
